--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,41 @@
 body{
   background: #f5f5f5;
 }
+.container{
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (min-width: 576px){
+  .container {
+    max-width: 540px;
+    padding-left: 0;
+    padding-right: 0; 
+  }
+}
+@media (min-width: 768px){
+  .container {
+    max-width: 720px;
+    padding-left: 0;
+    padding-right: 0; 
+  }
+}
+@media(min-width: 992px ){
+  .container{
+    max-width: 960px;
+    padding-left: 0;
+    padding-right: 0; 
+  }
+}
+@media(min-width: 1200px ){
+  .container{
+    max-width: 1200px;
+    padding-left: 0;
+    padding-right: 0; 
+  }
+}
+
+
+
