--- a/src/app/hotel/home/home.component.html
+++ b/src/app/hotel/home/home.component.html
@@ -5,15 +5,24 @@
 <!-- <button mat-flat-button color="primary" (click)="merchant()" style="margin-left: 10px;">点我去hotel 商家</button> -->
 
 <div class="container">
-  <mat-grid-list cols="5" gutterSize="12" rowHeight="2:3">
+  <mat-grid-list cols="5" gutterSize="12" rowHeight="372">
     <mat-grid-tile *ngFor="let item of goods">
-      <div class="card">
-          <img [src]="item.img" alt="">
-        <p>商品名称：{{item.title}}</p>
-        <p>商品id: {{item.id}}</p>
-        <p>商家id：{{item.merchantId}}</p>
-      </div>
-
+      <mat-card>
+        <img matCardImage [src]="item.img">
+        <mat-card-content>
+            {{item.title}}
+            <!-- <mat-card-title>{{item.title}}</mat-card-title> -->
+            <mat-card-subtitle>{{item.price}}</mat-card-subtitle>
+            <mat-form-field appearance="">
+              <input matInput  placeholder="Enter your password" [type]="hide ? 'password' : 'text'">
+              <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </mat-form-field>
+            <mat-card-actions align="end">
+              <button mat-button (click)="addToCart()" color="accent">加入购物车</button>
+            </mat-card-actions>
+        </mat-card-content>
+      </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
+
 </div>
