--- a/src/app/main/index/index.component.html
+++ b/src/app/main/index/index.component.html
@@ -1,8 +1,9 @@
 <div [@routerTransition]>
 
   <div class="container">
-    官网首页
-    <mat-icon  fontSet="Qxicon" fontIcon="qx-bag" color="primary" [inline]="true"></mat-icon>
+    <p>
+      官网首页<mat-icon  fontSet="Qxicon" fontIcon="qx-bag" color="primary" [inline]="true"></mat-icon>
+    </p>
   </div>
   <div class="row">
     <div class="col-md-6">
