--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<div style="text-align:center">
-    Welcome to {{ title }} app!
-    <span>登陆/注册</span> {{version}}
-</div>
+<app-header></app-header>
 <router-outlet></router-outlet>              
